<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>homedirect_rfid_pubsub</name>
  <version>0.0.0</version>
  <description>Subcriber and Publisher for providing data read from the RFID-Tag to the Robot</description>
  <maintainer email="alexander.janzen15@outlook.de">adev</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <exec_depend>mfrc522</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>spidev</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
